--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             </form>
 
             <h1  id="header-title">Item list</h1>
+            <h1  id="header-title">Izaan</h1>
             
             <div class="item-list">
                 <h1 id="item-head">Items</h1>
